tests/expected_invalid_duplicate_decl.diag.out
<input>:6:1: error: duplicate declaration for 'Foo'
    record Foo {
    ^^^^^^^^^^^^
